# AgenticRAG_ESG

./: .gitignore  README.md  agents.py  app.py  data_processing.py  indexing.py  prompts.py  pyproject.toml  test.py  tools.py
src/: agents.py  app.py  data_processing.py  events.py  indexing.py  node_prcessors.py  prompts.py  tools.py  workflow.py
tests/: test_agents.py  test_performance.py  test_workflow.py
